grammar.bnf
program ::= statement | program statement
statement ::= conditional | while | io | allocation | assign
assign ::= name "=" expr | name "++" | name "--"
io ::= read | print
conditional ::= if | else
if ::= "if" "(" comp_expr ")" "{" program "}"
else ::= "else" "{" program "}"
while ::= "while" "(" comp_expr ")" "{" program "}"
read ::= "read(" value ")" semicolon
print ::= "print(" value ")" semicolon
allocation ::= "let" name "=" value semicolon
value ::= string | number
string ::= "\"" "[a-zA-Z]+" "\""
comp_expr ::= expr comparison_sign expr
expr ::= "(" expr ")" | expr op expr | number | string | name
comparison_sign ::= "==" | ">=" | ">" | "<" | "<=" | "!="
name ::= "[a-zA-Z]+"
number ::= positive_number | neg_number
neg_number ::= "-" positive_number
positive_number ::= "[0-9]+"
semicolon ::= ";"
op ::= "*" | "/" | "%" | "+" | "-"
